--- a/pom.xml
+++ b/pom.xml
@@ -335,6 +335,22 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+              <groupId>com.coveo</groupId>
+              <artifactId>fmt-maven-plugin</artifactId>
+              <version>2.9</version>
+	      <configuration>
+		<verbose>true</verbose>
+	      </configuration>
+              <executions>
+                <execution>
+		  <phase>compile</phase>
+                  <goals>
+                    <goal>check</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
         </plugins>
 
         <extensions>
