--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,8 +16,11 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=WARN, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+# uncomment this line to get debug logging
+#log4j.logger.uk.ac.cam=DEBUG
